; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/cp/extr_parser.c_cp_parser_parse_and_diagnose_invalid_type_name.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/cp/extr_parser.c_cp_parser_parse_and_diagnose_invalid_type_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i64, i32 }

@CPP_NAME = common dso_local global i32 0, align 4
@TYPE_DECL = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_9__*)* @cp_parser_parse_and_diagnose_invalid_type_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cp_parser_parse_and_diagnose_invalid_type_name(%struct.TYPE_9__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_9__*, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_9__* %0, %struct.TYPE_9__** %3, align 8
  %5 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %6 = call i32 @cp_parser_parse_tentatively(%struct.TYPE_9__* %5)
  %7 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %8 = call i32 @cp_parser_id_expression(%struct.TYPE_9__* %7, i32 0, i32 1, i32* null, i32 1, i32 0)
  store i32 %8, i32* %4, align 4
  %9 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %10 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 8
  %12 = load i32, i32* @CPP_NAME, align 4
  %13 = call i32 @cp_lexer_next_token_is(i32 %11, i32 %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %37

15:                                               ; preds = %1
  %16 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %17 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %32

20:                                               ; preds = %15
  %21 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %22 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = call i64 @TYPE_P(i64 %23)
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %32

26:                                               ; preds = %20
  %27 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %28 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = call i64 @dependent_type_p(i64 %29)
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %37, label %32

32:                                               ; preds = %26, %20, %15
  %33 = load i32, i32* %4, align 4
  %34 = call i64 @TREE_CODE(i32 %33)
  %35 = load i64, i64* @TYPE_DECL, align 8
  %36 = icmp eq i64 %34, %35
  br i1 %36, label %37, label %40

37:                                               ; preds = %32, %26, %1
  %38 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %39 = call i32 @cp_parser_abort_tentative_parse(%struct.TYPE_9__* %38)
  store i32 0, i32* %2, align 4
  br label %54

40:                                               ; preds = %32
  %41 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %42 = call i32 @cp_parser_parse_definitely(%struct.TYPE_9__* %41)
  %43 = icmp ne i32 %42, 0
  br i1 %43, label %45, label %44

44:                                               ; preds = %40
  store i32 0, i32* %2, align 4
  br label %54

45:                                               ; preds = %40
  %46 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %47 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %48 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %47, i32 0, i32 0
  %49 = load i64, i64* %48, align 8
  %50 = load i32, i32* %4, align 4
  %51 = call i32 @cp_parser_diagnose_invalid_type_name(%struct.TYPE_9__* %46, i64 %49, i32 %50)
  %52 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %53 = call i32 @cp_parser_skip_to_end_of_block_or_statement(%struct.TYPE_9__* %52)
  store i32 1, i32* %2, align 4
  br label %54

54:                                               ; preds = %45, %44, %37
  %55 = load i32, i32* %2, align 4
  ret i32 %55
}

declare dso_local i32 @cp_parser_parse_tentatively(%struct.TYPE_9__*) #1

declare dso_local i32 @cp_parser_id_expression(%struct.TYPE_9__*, i32, i32, i32*, i32, i32) #1

declare dso_local i32 @cp_lexer_next_token_is(i32, i32) #1

declare dso_local i64 @TYPE_P(i64) #1

declare dso_local i64 @dependent_type_p(i64) #1

declare dso_local i64 @TREE_CODE(i32) #1

declare dso_local i32 @cp_parser_abort_tentative_parse(%struct.TYPE_9__*) #1

declare dso_local i32 @cp_parser_parse_definitely(%struct.TYPE_9__*) #1

declare dso_local i32 @cp_parser_diagnose_invalid_type_name(%struct.TYPE_9__*, i64, i32) #1

declare dso_local i32 @cp_parser_skip_to_end_of_block_or_statement(%struct.TYPE_9__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
